fix css title overlap when size too long

--- a/src/renderer/Widget/IframeWidget/style.css
+++ b/src/renderer/Widget/IframeWidget/style.css
@@ -21,15 +21,34 @@
 .iframe-header .size{
     position: absolute;
     font-size: 32px;
-    top: 50%;
-    transform: translateY(-50%);
 }
 .iframe-header .icon{
     left: 1%;
 }
+
+
+
 .iframe-header .title{
     left: 5%;
+    overflow-x: auto; 
+    overflow-y: hidden;
+    max-width: 85%;
+    white-space: nowrap;
+    height: 45px;
 }
+
+.iframe-header .title::-webkit-scrollbar{
+    height: 2px;
+}
+
+.iframe-header .title::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px #c4c7c7; 
+}
+
+.iframe-header .title::-webkit-scrollbar-thumb {
+    background: #c4c7c7; 
+}
+
 .center-setting{
     top: 50%;
     transform: translateY(-50%);
